renamed InputFormat, little refactoring, handles bounded case